@startuml teamforge_erd
' Crow’s Foot Notation
hide circle
left to right direction

entity "User" as user {
  * id : int <<PK>>
  --
  username       : varchar
  email          : varchar
  password_hash  : varchar
}

entity "Chat" as chat {
  * id : int <<PK>>
  --
  name     : varchar
  is_group : bool
}

entity "ChatUser" as chat_user {
  * id : int <<PK>>
  --
  chat_id               : int <<FK>>
  user_id               : int <<FK>>
  notifications_enabled : bool
}

entity "Message" as message {
  * id : int <<PK>>
  --
  chat_id           : int <<FK>>
  sender_id         : int <<FK>>
  reply_to_id       : int <<FK>>
  forwarded_from_id : int <<FK>>
  content           : text
  timestamp         : datetime
  media_filename    : varchar
  deleted_for_all   : bool
}

entity "Reaction" as reaction {
  * id : int <<PK>>
  --
  message_id : int <<FK>>
  user_id    : int <<FK>>
  reaction   : varchar
}

entity "DeletedMessage" as del_msg {
  * id : int <<PK>>
  --
  message_id : int <<FK>>
  user_id    : int <<FK>>
}

entity "Friendship" as friendship {
  * id : int <<PK>>
  --
  requester_id : int <<FK>>
  receiver_id  : int <<FK>>
  status       : varchar
}

entity "CallHistory" as call_hist {
  * id : int <<PK>>
  --
  caller_id    : int <<FK>>
  call_type    : varchar
  participants : varchar
  start_time   : datetime
  end_time     : datetime
  duration     : int
}

entity "Task" as task {
  * id : int <<PK>>
  --
  user_id     : int <<FK>>
  title       : varchar
  description : text
  due_date    : date
  created_at  : datetime
}

entity "Software" as software {
  * id : int <<PK>>
  --
  title       : varchar
  description : text
  image_url   : varchar
  github_url  : varchar
}


user ||--o{ chat_user
chat ||--o{ chat_user

chat   ||--o{ message
user   ||--o{ message : sender


user   ||--o{ reaction
message ||--o{ reaction

user   ||--o{ del_msg
message ||--o{ del_msg

user ||--o{ friendship : requester
user ||--o{ friendship : receiver

user ||--o{ call_hist : caller

user ||--o{ task
@enduml
